Removing save a copy button

--- a/Admin/Pages/Positions/Edit.cshtml
+++ b/Admin/Pages/Positions/Edit.cshtml
@@ -23,7 +23,7 @@
 
                 <div class="form-group space-btns">
                     <button class="btn btn-primary" asp-page-handler="create" asp-all-route-data="routedata">Save Changes</button>
-                    <a class="btn btn-info" href="/Positions/Index">Save a Copy</a>
+                    @*<a class="btn btn-info" href="/Positions/Index">Save a Copy</a>*@
                     <a class="btn btn-secondary" href="/Positions/Details?positionid=@Model.Id">Cancel</a>
                 </div>
             </form>
