--- a/Admin/Pages/Certificates/Index.cshtml
+++ b/Admin/Pages/Certificates/Index.cshtml
@@ -50,8 +50,8 @@
         <table class="table">
             <thead>
                 <tr class="table-header-row text-center">
-                    <th><b>Certificate English</b></th>
-                    <th><b>Certificate French</b></th>
+                    <th><b class="sort-column">Certificate English</b></th>
+                    <th><b class="sort-column">Certificate French</b></th>
                     <th>
                         <img src="@(Model.DisplayTopOfPage ? "/images/icons/up_arrow.png" : "/images/icons/down_arrow.png")" 
                         class="arrow-icon" data-toggle="collapse" data-target="#collapsibleTop" 
