--- a/Admin/Pages/Competencies/List.cshtml
+++ b/Admin/Pages/Competencies/List.cshtml
@@ -60,10 +60,10 @@
         <table class="table">
             <thead>
                 <tr class="table-header-row text-center">
-                    <th class="col-2"><b>Competency English</b></th>
-                    <th class="col-2"><b>Competency French</b></th>
-                    <th class="col-3"><b>Description English</b></th>
-                    <th class="col-4"><b>Description French</b></th>
+                    <th class="col-2"><b class="sort-column">Competency English</b></th>
+                    <th class="col-2"><b class="sort-column">Competency French</b></th>
+                    <th class="col-3"><b class="sort-column">Description English</b></th>
+                    <th class="col-4"><b class="sort-column">Description French</b></th>
                     <th class="col-1">
                         <img src="@(Model.DisplayTopOfPage ? "/images/icons/up_arrow.png" : "/images/icons/down_arrow.png")" 
                         class="arrow-icon" data-toggle="collapse" data-target="#collapsibleTop" 
