--- a/Admin/Pages/Positions/Index.cshtml
+++ b/Admin/Pages/Positions/Index.cshtml
@@ -47,9 +47,9 @@
         <table class="table">
             <thead>
                 <tr class="table-header-row text-center">
-                    <th width="7%"><b>Level</b></th>
-                    <th width="35%"><b>Title English</b></th>
-                    <th width="35%"><b>Title French</b></th>
+                    <th width="7%"><b class="sort-column">Level</b></th>
+                    <th width="35%"><b class="sort-column">Title English</b></th>
+                    <th width="35%"><b class="sort-column">Title French</b></th>
                     <th width="15%">
                         <img src="@(Model.DisplayTopOfPage ? "/images/icons/up_arrow.png" : "/images/icons/down_arrow.png")" 
                         class="arrow-icon" data-toggle="collapse" data-target="#collapsibleTop" 
