Added feature to locate added similar positions

--- a/Admin/Pages/Shared/_Layout.cshtml
+++ b/Admin/Pages/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3 no-padding">
+        <nav class="navbar navbar-expand-sm rememberIfVisited navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3 no-padding">
             <div class="container">
                 <a class="navbar-brand smooth-underline" asp-area="" asp-page="/Index">CCG CCT Admin</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -25,22 +25,22 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item" id="navHome">
-                            <a class="nav-link" href="/Index">Home</a>
+                            <a class="nav-link rememberIfVisited" href="/Index">Home</a>
                         </li>
                         <li class="nav-item" id="navCertificates">
-                            <a class="nav-link" href="/Certificates">Certificates</a>
+                            <a class="nav-link rememberIfVisited" href="/Certificates">Certificates</a>
                         </li>
                         <li class="nav-item" id="navCertDesc">
-                            <a class="nav-link" href="/Certificates/Descriptions">Certificate Descriptions</a>
+                            <a class="nav-link rememberIfVisited" href="/Certificates/Descriptions">Certificate Descriptions</a>
                         </li>
                         <li class="nav-item" id="navPositions">
-                            <a class="nav-link" href="/Positions">Positions</a>
+                            <a class="nav-link rememberIfVisited" href="/Positions">Positions</a>
                         </li>
                         <li class="nav-item" id="navCompetencies">
-                            <a class="nav-link" href="/Competencies/List?typeid=1">Competencies</a>
+                            <a class="nav-link rememberIfVisited" href="/Competencies/List?typeid=1">Competencies</a>
                         </li>
                         <li class="nav-item" id="navSimilar">
-                            <a class="nav-link" href="/Similar">Similar Positions</a>
+                            <a class="nav-link rememberIfVisited" href="/Similar">Similar Positions</a>
                         </li>
                     </ul>
                 </div>
