Changed wording on button

--- a/Admin/Pages/Similar/Locate.cshtml
+++ b/Admin/Pages/Similar/Locate.cshtml
@@ -54,7 +54,7 @@
                         </span>
                     }
 
-                    <a class="btn btn-secondary pull-right bottom-two-px bold index-right-button" asp-page="Index">Back to Index</a>
+                    <a class="btn btn-secondary pull-right bottom-two-px bold index-right-button" asp-page="Index">Back to List</a>
                 </h6>
             </div>
         </form>
@@ -88,7 +88,7 @@
                         <h6 class="glyphicon glyphicon-save-file display-inline position-relative" style="top: 4px !important; right: 5px;" onclick="print()"></h6>
                     }
                     <h6 class="display-inline"><a class="btn btn-primary bold bottom-two-px" href="/Similar/Locate">Locate Another Position</a></h6>
-                    <a class="btn btn-secondary bottom-two-px bold no-margin-right right-button-locate" asp-page="Index">Back to Index</a>
+                    <a class="btn btn-secondary bottom-two-px bold no-margin-right right-button-locate" asp-page="Index">Back to List</a>
                 </div>
             </div>
         </div>
