--- a/Admin/Pages/Competencies/List.cshtml
+++ b/Admin/Pages/Competencies/List.cshtml
@@ -61,7 +61,7 @@
 
 @if (itemsThatMatchFilter.Any())
 {
-    <div id="table-container">
+    <div id="table-container" style="max-height: @(Model.LastTableContainerHeight)px; height: @(Model.LastTableContainerHeight)px">
         <table class="table">
             <thead>
                 <tr class="table-header-row text-center">
