--- a/Admin/Pages/Similar/Locate.cshtml
+++ b/Admin/Pages/Similar/Locate.cshtml
@@ -189,7 +189,7 @@ else
             eightyPositions.Count(), seventyPositions.Count(), };
         int numRows = arrayLengths.Max();
 
-        <div id="table-container">
+        <div id="table-container" style="max-height: @(Model.LastTableContainerHeight)px; height: @(Model.LastTableContainerHeight)px">
             <table class="table">
                 <thead>
                     <tr class="table-header-row text-center">
