Added feature to locate certificates and competencies

--- a/Admin/Pages/Shared/_Position.cshtml
+++ b/Admin/Pages/Shared/_Position.cshtml
@@ -71,7 +71,7 @@
     <tbody>
         <tr>
             <td>
-                <div class="form-group">
+                <div class="form-group no-margin-bottom">
                     @{
                         bool onLand = true;
                         if (Model.JobHLCategory == "1")
