--- a/Admin/Pages/Similar/Locate.cshtml
+++ b/Admin/Pages/Similar/Locate.cshtml
@@ -145,7 +145,7 @@
                                 @Html.DisplayFor(modelItem => item.JobTitleFre)
                             </td>
                              <td class="text-center">
-                                <a href="/Similar/Locate?id=@item.JobTitleId">Locate</a>
+                                <a href="/Similar/Locate?id=@item.JobTitleId" class="load-link">Locate</a>
                             </td>
                         </tr>
                     }
