--- a/Admin/wwwroot/css/site.css
+++ b/Admin/wwwroot/css/site.css
@@ -803,6 +803,11 @@ header {
     max-height: 500px !important;
 }
 
+.besides-external-link {
+    display: inline-block;
+    margin-left: 6px;
+}
+
 @media print {
 
     .glyphicon {
